# phylo-gnn-public

./: .gitignore  README.md  evaluate.py  pyproject.toml  train.py
data/processed/: labels.csv  metabolite_labels.csv  phylo_species_order.csv
model_configs/GAT/: default.yaml
model_configs/SimpleGNN/: default.yaml
notebooks/experiments/: 1102_simple_gnn.ipynb  1203_simple_gnn_eval.ipynb
notebooks/pipeline/: 01_uhgg_labels.ipynb  02_process_phylo_tree.ipynb  03_rm_labels.ipynb
scripts/: setup_data.sh
scripts/download_uhgg_eggnog/: create_missing_species_txt.py  diagnose_downloads.py  download_missing_species.sh  download_uhgg_eggnog.sh  extract_species_ids.py
src/data/: agora_parser.py  build_graph.py  fuzz_match.py  gff_parser.py  kegg_client.py  uhgg_parser.py
src/models/: GAT.py  SimpleGNN.py
src/utils/: config.py  https_utils.py
